0220 fix hidden/visible

--- a/main.css
+++ b/main.css
@@ -1008,3 +1008,7 @@ button {
     transform: translate(0, 160%);
   }
 }
+
+.main, .navbar, .footer {
+  visibility: hidden;
+}
